--- a/live.html
+++ b/live.html
@@ -10,13 +10,11 @@
 <header>
 	<div id="hdblock"></div>
 	<div id="logotype"><img src="img/logo.png" alt="logo"></div>
-	<a href="news.html"> <img id="news" src="img/newsafter.jpg"> </a>
+	<a href="news.html"> <img id="news" src="img/newsagain.jpg"> </a>
 	<a href="teamleaders.html"> <img id="teamleadersagain" src="img/teamleadersagain.jpg"> </a>
 	<a href="officialmatch.html"> <img id="officialmatchagain" src="img/officialmatchagain.jpg"> </a>
 	<a href="live.html"> <img id="liveagain" src="img/liveagain.jpg"> </a>
 </header>	
-	
-	<img id="news1" src="img/news1.jpg">
 
 <footer>
 	
