--- a/officialmatch.html
+++ b/officialmatch.html
@@ -8,20 +8,26 @@
 </head>
 <body>
 <header>
+	
 	<div id="hdblock"></div>
 	<div id="logotype"><img src="img/logo.png" alt="logo"></div>
-	<a href="news.html"> <img id="news" src="img/newsafter.jpg"> </a>
+	<a href="news.html"> <img id="news" src="img/newsagain.jpg"> </a>
 	<a href="teamleaders.html"> <img id="teamleadersagain" src="img/teamleadersagain.jpg"> </a>
-	<a href="officialmatch.html"> <img id="officialmatchagain" src="img/officialmatchagain.jpg"> </a>
+	<a href="officialmatch.html"> <img id="officialmatchagain" src="img/officialmatchafter.jpg"> </a>
 	<a href="live.html"> <img id="liveagain" src="img/liveagain.jpg"> </a>
 </header>	
-	
-	<img id="news1" src="img/news1.jpg">
+	<img id="block1" src="img/block1.jpg" alt="official matche #1">
+	<details id="val">
 
+			<summary id="results">
+				<img src="img/block2.jpg">
+
+			</summary>
 <footer>
 	
 </footer>
-
+	<img src="img/block3.jpg">
+	</details>
 		
 </body>
 </html>
