--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 <header>
 	<div id="hdblock"></div>
-	<div id="logotype"><img src="img/logo.png" alt="logo"></div>
-	<a href="news.html"> <img id="news" src="img/newsafter.jpg"> </a>
-	<a href="teamleaders.html"> <img id="teamleadersagain" src="img/teamleadersagain.jpg"> </a>
-	<a href="officialmatch.html"> <img id="officialmatchagain" src="img/officialmatchagain.jpg"> </a>
-	<a href="live.html"> <img id="liveagain" src="img/liveagain.jpg"> </a>
+	<div id="logotype"><img src="logo.png" alt="logo"></div>
+	<a href="news.html"> <img id="news" src="newsafter.jpg"> </a>
+	<a href="teamleaders.html"> <img id="teamleadersagain" src="teamleadersagain.jpg"> </a>
+	<a href="officialmatch.html"> <img id="officialmatchagain" src="officialmatchagain.jpg"> </a>
+	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
 </header>	
 	
-	<img id="news1" src="img/news1.jpg">
+	<img id="news1" src="news1.jpg">
 
 <footer>
 	
