--- a/teamleaders.html
+++ b/teamleaders.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>FIFA 44/50</title>
@@ -9,16 +9,16 @@
 <body>
 <header>
 	<div id="hdblock"></div>
-	<div id="logotype"><img src="img/logo.png" alt="logo"></div>
+	<div id="logotype"><img src="logo.png" alt="logo"></div>
 	<a href="news.html"> <img id="news" src="img/newsagain.jpg"> </a>
-	<a href="teamleaders.html"> <img id="teamleadersagain" src="img/teamleadersafter.jpg"> </a>
-	<a href="officialmatch.html"> <img id="officialmatchagain" src="img/officialmatchagain.jpg"> </a>
-	<a href="live.html"> <img id="liveagain" src="img/liveagain.jpg"> </a>
+	<a href="teamleaders.html"> <img id="teamleadersagain" src="teamleadersafter.jpg"> </a>
+	<a href="officialmatch.html"> <img id="officialmatchagain" src="officialmatchagain.jpg"> </a>
+	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
 </header>
 
-<img id="fst" src="img/1st.png">
-<img id="tst"src="img/2st.png">
-<img id="trst"src="img/3st.png">		
+<img id="fst" src="1st.png">
+<img id="tst"src="2st.png">
+<img id="trst"src="3st.png">		
 
 
 <footer>
