--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>FIFA 44/50</title>
 </head>
-<body>
+<body style : "background-color: #C0C0C1;">
 <header>
 	<div id="hdblock"></div>
 	<div id="logotype"><img src="logo.png" alt="logo"></div>
