--- a/officialmatch.html
+++ b/officialmatch.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>FIFA 44/50</title>
 </head>
-<body>
+<body style="background-color:#cfcfcf;">
 <header>
 	
 	<div id="hdblock"></div>
