--- a/officialmatch.html
+++ b/officialmatch.html
@@ -11,7 +11,7 @@
 	
 	<div id="hdblock"></div>
 	<div id="logotype"><img src="logo.png" alt="logo"></div>
-	<a href="news.html"> <img id="news" src="newsagain.jpg"> </a>
+	<a href="index.html"> <img id="news" src="newsagain.jpg"> </a>
 	<a href="teamleaders.html"> <img id="teamleadersagain" src="teamleadersagain.jpg"> </a>
 	<a href="officialmatch.html"> <img id="officialmatchagain" src="officialmatchafter.jpg"> </a>
 	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
