--- a/teamleaders.html
+++ b/teamleaders.html
@@ -10,7 +10,7 @@
 <header>
 	<div id="hdblock"></div>
 	<div id="logotype"><img src="logo.png" alt="logo"></div>
-	<a href="news.html"> <img id="news" src="newsagain.jpg"> </a>
+	<a href="index.html"> <img id="news" src="newsagain.jpg"> </a>
 	<a href="teamleaders.html"> <img id="teamleadersagain" src="teamleadersafter.jpg"> </a>
 	<a href="officialmatch.html"> <img id="officialmatchagain" src="officialmatchagain.jpg"> </a>
 	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
