--- a/teamleaders.html
+++ b/teamleaders.html
@@ -16,7 +16,7 @@
 	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
 </header>
 
-<img id="fst" src="1st.png">
+<p><a href="https://web.telegram.org/#/im?p=@officialsandarie" target="_blank"><img id="fst" src="1st.png"></a></p>
 <img id="tst"src="2st.png">
 <img id="trst"src="3st.png">		
 
