--- a/teamleaders.html
+++ b/teamleaders.html
@@ -16,9 +16,9 @@
 	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
 </header>
 
-<p><a href="https://web.telegram.org/#/im?p=@officialsandarie" target="_blank"><img id="fst" src="1st.png"></a></p>
-<img id="tst"src="2st.png">
-<img id="trst"src="3st.png">		
+ <p><a href="https://web.telegram.org/#/im?p=@officialsandarie" target="_blank"><img id="fst" src="1st.png"></a></p>
+<p><a href="noneinf.html" target="_blank"><img id="tst"src="2st.png"></a></p>
+<p><a href="noneinf.html" target="_blank"><img id="trst"src="3st.png"></a></p>		
 
 
 <footer>
