--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
 </header>	
 	
-	
+	<img id="news3" src="news3.jpg">
 	<img id="news2" src="news2.jpg">
 	<img id="news1" src="news1.jpg">
 
