--- a/officialmatch.html
+++ b/officialmatch.html
@@ -5,6 +5,13 @@
 	<meta http-equiv="Content-Type" content="text/html"; charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<title>FIFA 44/50</title>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2850744558435516",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body style="background-color:#cfcfcf;">
 <header>
