--- a/live.html
+++ b/live.html
@@ -17,6 +17,7 @@
 </header>	
 
 	<div id="mc-container"></div>
+	cackle_widget = window.cackle_widget || [];
 <script type="text/javascript">
 cackle_widget.push({widget: 'Comment', id: 60703});
 (function() {
