--- a/officialmatch.html
+++ b/officialmatch.html
@@ -17,6 +17,8 @@
 	<a href="officialmatch.html"> <img id="officialmatchagain" src="officialmatchafter.jpg"> </a>
 	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
 </header>	
+
+
 		<img id="match2" src="match2.jpg" alt="official match #2"> 
 		<p id="txtmatch">
 			Sundarie vs. Favorit
@@ -32,6 +34,23 @@
 
 			</summary>
 	<img src="block4.jpg">
+	</details>
+
+			<img id="match2" src="match3.jpg" alt="official match #3"> 
+		<p id="txtmatch">
+			Sundarie vs. Nick
+		</p>
+		<p id="txtmatch2">
+			official match<span id="resh">#</span>2     15.07.2018
+		</p>
+		<p id="demo"></p>
+			<details id="val3">
+
+			<summary id="results3">
+				<img src="block2.jpg">
+
+			</summary>
+	<img src="block5.jpg">
 	</details>
 
 
