--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<a href="live.html"> <img id="liveagain" src="liveagain.jpg"> </a>
 </header>	
 	
+	<img id="news4" src="news4.jpg">
 	<img id="news3" src="news3.jpg">
 	<img id="news2" src="news2.jpg">
 	<img id="news1" src="news1.jpg">
