--- a/officialmatch.html
+++ b/officialmatch.html
@@ -96,7 +96,7 @@ var x = setInterval(function() {
     // If the count down is over, write some text 
     if (distance < 0) {
         clearInterval(x);
-        document.getElementById("demo").innerHTML = "Матч початий";
+        document.getElementById("demo").innerHTML = "Match start";
     }
 }, 1000);
 </script>
